tests/snapshots/generate_plan_tests__python_setuptools.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {},
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "python38"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "python -m venv /opt/venv && . /opt/venv/bin/activate && pip install --upgrade build setuptools && pip install ."
      ],
      "onlyIncludeFiles": [
        "pyproject.toml"
      ],
      "cacheDirectories": [
        "/root/.cache/pip"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    }
  ],
  "startPhase": {
    "cmd": "python -m nixpacks-setuptools"
  }
}
