tests/snapshots/generate_plan_tests__ruby_local_deps.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "BUNDLE_GEMFILE": "/app/Gemfile",
    "GEM_HOME": "/usr/local/rvm/gems/ruby-3.1.2",
    "GEM_PATH": "/usr/local/rvm/gems/ruby-3.1.2:/usr/local/rvm/gems/ruby-3.1.2@global",
    "MALLOC_ARENA_MAX": "2",
    "NIXPACKS_METADATA": "ruby"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "bundle install",
        "bundle clean --force"
      ],
      "cacheDirectories": [
        "/root/.bundle/cache",
        "/root/.rbenv"
      ],
      "paths": [
        "/usr/local/rvm/rubies/ruby-3.1.2/bin",
        "/usr/local/rvm/gems/ruby-3.1.2/bin",
        "/usr/local/rvm/gems/ruby-3.1.2@global/bin"
      ]
    },
    "setup": {
      "name": "setup",
      "aptPkgs": [
        "procps",
        "git",
        "curl",
        "autoconf",
        "bison",
        "build-essential",
        "libssl-dev",
        "libyaml-dev",
        "libreadline6-dev",
        "zlib1g-dev",
        "libncurses5-dev",
        "libffi-dev",
        "libgdbm6",
        "libgdbm-dev",
        "libdb-dev"
      ],
      "cmds": [
        "curl -fsSL https://github.com/rbenv/rbenv-installer/raw/HEAD/bin/rbenv-installer | bash -s stable && printf '\\neval \"$(rbenv init -)\"' >> /root/.profile && . /root/.profile && rbenv install 3.1.2 && rbenv global 3.1.2 && gem install bundler:2.3.7"
      ],
      "onlyIncludeFiles": [],
      "paths": [
        "$HOME/.rbenv/bin"
      ]
    }
  },
  "start": {
    "cmd": "bundle exec ruby app.rb"
  }
}
