tests/snapshots/generate_plan_tests__ruby_rails_api_app.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "BUNDLE_GEMFILE": "/app/Gemfile",
    "GEM_HOME": "/usr/local/rvm/gems/3.1.2",
    "GEM_PATH": "/usr/local/rvm/gems/3.1.2:/usr/local/rvm/gems/3.1.2@global"
  },
  "staticAssets": {},
  "phases": [
    {
      "name": "setup",
      "nixPackages": [],
      "nixLibraries": [],
      "aptPackages": [
        "procps",
        "libpq-dev"
      ],
      "commands": [
        "curl -sSL https://get.rvm.io | bash -s stable && . /etc/profile.d/rvm.sh",
        "rvm install 3.1.2",
        "rvm --default use 3.1.2",
        "gem install bundler:2.3.7",
        "echo 'source /usr/local/rvm/scripts/rvm' >> /root/.profile"
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "bundle install"
      ],
      "onlyIncludeFiles": [
        "Gemfile*"
      ],
      "cacheDirectories": [
        "/root/.bundle/cache"
      ],
      "paths": [
        "/usr/local/rvm/rubies/3.1.2/bin",
        "/usr/local/rvm/gems/3.1.2/bin",
        "/usr/local/rvm/gems/3.1.2@global/bin"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": []
    }
  ],
  "startPhase": {
    "cmd": "rake db:migrate && bundle exec bin/rails server -b 0.0.0.0 -p ${PORT:-3000}"
  }
}
